# impartial-game

./: LICENSE  README.md  impartial-game.cabal  stack.yaml
src/Data/Game/: Impartial.hs
src/Data/Game/Impartial/: Base.hs  Impartial.hs  Injection.hs  Product.hs  Simple.hs  Sum.hs
test/: Kayles.hs
